Improved: Helveticus App-Bar Css Issue - Height change on hover (OFBIZ-12661)
When hovering an app-navigation item, the height of the app bar changes.
Doesn't look good. Attached the correction.

Thanks: Ingo Wolfmayr

--- a/themes/helveticus/webapp/helveticus/helveticus-main-theme.less
+++ b/themes/helveticus/webapp/helveticus/helveticus-main-theme.less
@@ -493,6 +493,7 @@ a.buttontext{
           color:@dark-color-theme;
           font-weight: 600;
           font-size:1.2rem;
+          display: block;
         }
       }
     }
